# sandbox-hub

./: GEMINI.md  README.md  asdosan_scele.csv  asdosan_scele.py  forbes.ipynb  gutenberg.py  numerical method.ipynb  pyproject.toml  recession.ipynb  reddit.env-template  reddit.ipynb  reddit.py  reset_ipynb.py  siakng_transcript_to_obsidian.ipynb  taleb.ipynb  travelling-salesman-problem.ipynb  youtube_summarizer_anthropic.py  youtube_summarizer_openai.py
computer-vision/: compress_images_in_current_folder.py
courses/forage-JPMC_quantitative-research/: forage-JPMC_quantitative-research.md
crypto-data/: .gitignore  Q-Learning Trader.ipynb  binance_csv.py  coingecko.py  datasets.py  test.ipynb
docker-compose/: docker-compose.md
genai-demo/: .gitignore  blog_insights.md  gemini_demo.py  genai_llama.py  langchain_openrouter.py  langsmith_demo.py  llamaindex_demo.py  ollama_demo.py  openai_demo.py  requirements.txt
indonesia-elections/: main.ipynb
pdf2text2/: clean.py  gemini.md  lhkpn_clean.json  main.py  output.txt  pyproject.toml  structured_wealth_data.json  wealth_summary_report.txt
recruitment/: Recruitment.md
religious-diversity-analysis/: figure.ipynb  indonesia-religious-diversity-analysis.md  organization.csv  organization.ipynb
scraping/: enterkomputer.ipynb  package-lock.json  package.json
scraping/narasi/: pyproject.toml
scraping/narasi/example/: example.py
scraping/narasi/src/narasi/: __init__.py
scraping/narasi/src/narasi/js/: main.js
text2audio/: almatsurat.md  main.py  pyproject.toml
video2text/: main.py  pyproject.toml
(+93 files in other folders)
