[project]
name = "sandbox-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deep-translator>=1.11.4",
    "dotenv>=0.9.9",
    "fredapi>=0.5.2",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.0",
    "ollama>=0.5.1",
    "openai>=1.96.1",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.42",
    "tiktoken>=0.9.0",
    "yfinance>=0.2.65",
    "youtube-transcript-api==1.1.1",
]

[tool.uv.workspace]