[project]
name = "narasi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ichsanulamal", email = "muhammad.ichsanul19@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
narasi = "narasi:run_node_script"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
